--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,5 @@ services:
     name: esp32-log-server
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python main.py"
+    startCommand: gunicorn --bind 0.0.0.0:$PORT main:app
+    plan: free
