--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,10 @@ services:
   - type: web
     name: esp32-log-server
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: gunicorn --bind 0.0.0.0:$PORT main:app
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main.py
     plan: free
+    autoDeploy: true
+    envVars:
+      - key: PORT
+        value: 10000
